# YakoEngine

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml  windows-googletest.yml
Conan/: conanfile.txt
Conan/Profiles/Windows/: windows-debug  windows-release
Games/: CMakeLists.txt
Games/TerminalSnakeGame/: CMakeLists.txt  TerminalSnakeGameDependencies.cmake
Games/TerminalSnakeGame/Source/: Components.h  Game.cpp  Game.h
SandBox/: CMakeLists.txt
SandBox/Source/: main.cpp
Scripts/: Automation.py
Scripts/Windows/: build-debug.bat  build-release.bat
YakoCxx/: CMakeLists.txt
YakoCxx/Source/: main.cpp
YakoEngine/: CMakeLists.txt  YakoEngineDependencies.cmake
YakoEngine/Source/: Engine.cpp  Engine.h  YakoEngine.h  pch.h
YakoEngine/Source/Core/Event/: Event.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
YakoEngine/Source/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
YakoEngine/Source/Core/Log/: Log.cpp  Log.h
YakoEngine/Source/Platform/Window/: IWindow.h  IWindowManager.h
YakoEngine/Source/Platform/Window/GLFW/: GLFWwindowWrapper.cpp  GLFWwindowWrapper.h  GLFWwindowWrapperManager.cpp  GLFWwindowWrapperManager.h
YakoEngine/Source/Utility/: Delegates.h  NonCopyableMoveable.h  Singleton.h
YakoEngineTester/: CMakeLists.txt
YakoEngineTester/Source/: DelegateTesting.cpp  EventTesting.cpp  LayerTesting.cpp  LogTesting.cpp  WindowTesting.cpp
